--- a/style.css
+++ b/style.css
@@ -5,22 +5,29 @@
     font-family: "Dosis", Arial;
 }
 
-.horiz {
-    flex-direction: row;
-}
-
 .newpage {
-    font-size: 100px;
-    right: 0;
+    font-size: 200px;
     text-align: right;
+    position: absolute;
+    right: 50%;
+    display: flex;
+    flex-direction: row;
 }
 
 #newtxt {
     color: #F0F0F0;
+    position: absolute;
+    left: 50%;
+    margin-top: 50vh;
+    transform: translate(0%, -50%);
 }
 
 #test {
     color: #AAAAAA;
+    position: absolute;
+    right: 50%;
+    margin-top: 50vh;
+    transform: translate(0%, -50%);
 }
 
 html, body {
